WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90840
[CSS Shaders] The FECustomFilter is not making the GL context active
https://bugs.webkit.org/show_bug.cgi?id=90840
Summary
[CSS Shaders] The FECustomFilter is not making the GL context active
Alexandru Chiculita
Reported
2012-07-09 17:26:48 PDT
The FECustomFilter is not making the GC3D context active and some platforms are not doing that by default resulting in crashes of uninitialized contexts.
Attachments
Patch V1
(7.11 KB, patch)
2012-07-09 17:40 PDT
,
Alexandru Chiculita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexandru Chiculita
Comment 1
2012-07-09 17:40:52 PDT
Created
attachment 151369
[details]
Patch V1
WebKit Review Bot
Comment 2
2012-07-09 20:27:53 PDT
Comment on
attachment 151369
[details]
Patch V1 Clearing flags on attachment: 151369 Committed
r122189
: <
http://trac.webkit.org/changeset/122189
>
WebKit Review Bot
Comment 3
2012-07-09 20:27:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug