Source/WebCore/platform/graphics/filters/CustomFilterMesh.cpp
@@ -245,6 +245,8 @@ CustomFilterMesh::CustomFilterMesh(GraphicsContext3D* context, unsigned columns,
     m_indicesCount = generator.indicesCount();
     m_bytesPerVertex = generator.floatsPerVertex() * sizeof(float);    
 
+    m_context->makeContextCurrent();
+
     m_verticesBufferObject = m_context->createBuffer();
     m_context->bindBuffer(GraphicsContext3D::ARRAY_BUFFER, m_verticesBufferObject);
     m_context->bufferData(GraphicsContext3D::ARRAY_BUFFER, generator.vertices().size() * sizeof(float), generator.vertices().data(), GraphicsContext3D::STATIC_DRAW);
@@ -256,6 +258,7 @@ CustomFilterMesh::CustomFilterMesh(GraphicsContext3D* context, unsigned columns,
 
 CustomFilterMesh::~CustomFilterMesh()
 {
+    m_context->makeContextCurrent();
     m_context->deleteBuffer(m_verticesBufferObject);
     m_context->deleteBuffer(m_elementsBufferObject);
 }
